# clipa

./: bun.lockb  eslint.config.js  index.html  package.json  readme.md  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  main.rs  shortcuts.rs  state.rs  tray.rs  window.rs
src/backend/: commands.ts  store.ts
src/components/: DyIcon.tsx
src/features/clipboard/: ClipboardProvider.tsx  clipboardContext.ts  clipboardHooks.ts  clipboardTypes.ts  clipboardUtils.ts  index.ts
src/features/generative/: GenerativeProvider.tsx  generativeContext.ts  generativeHooks.ts  generativeTypes.ts  generativeUtils.ts  index.ts
src/features/search/: SearchProvider.tsx  index.ts  searchContext.ts  searchHooks.ts
src/features/tags/: TagsConstants.ts  TagsProvider.tsx  index.ts  tagsContext.ts  tagsHooks.ts  tagsTypes.ts
src/features/vault/: VaultProvider.tsx  index.ts  vaultContext.ts  vaultHooks.ts  vaultTypes.ts
src/routes/app/: AppComponent.tsx  appRoute.ts
src/routes/clipboard/: ClipboardComponent.tsx  clipboardRoute.ts  index.ts
src/routes/main/: MainComponent.tsx  index.ts  mainRoute.ts
src/routes/note/: NoteComponent.tsx  index.ts  noteRoute.ts
src/routes/settings/: SettingsComponent.tsx  index.ts  settingsRoute.ts
src/routes/vault/: VaultComponent.tsx  index.ts  vaultRoute.ts
src/styles/: components.module.css  mantine.tsx
src/utils/: date.ts
(+16 files in other folders)
