[package]
name = "clipa"
description = "better clipboard manager"
version = "0.1.0"
authors = ["Meslzy"]
edition = "2021"

[lib]
name = "clipa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
base64 = "0.22.1"
image = "0.24"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_DataExchange",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi"
]
